syntax = "proto3";

package passport.api.user.v1;

option go_package = "github.com/ryanreadbooks/whimer/passport/api/user/v1";

message UserInfo {
  int64 uid = 1;
  string nickname = 2;
  string avatar = 3;
  string style_sign = 4;
  string gender = 5;
}

message BatchGetUserRequest { repeated int64 uids = 1; }

message BatchGetUserResponse { map<string, UserInfo> users = 1; }

message BatchGetUserV2Request { repeated int64 uids = 1; }

message BatchGetUserV2Response { map<int64, UserInfo> users = 1; }

message GetUserRequest { int64 uid = 1; }

message GetUserResponse { UserInfo user = 1; }

message HasUserRequest { int64 uid = 1; }

message HasUserResponse { bool has = 1; }

service UserService {
  // 批量获取用户信息
  rpc BatchGetUser(BatchGetUserRequest) returns (BatchGetUserResponse);
  rpc BatchGetUserV2(BatchGetUserV2Request) returns (BatchGetUserV2Response);
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  // 判断用户是否存在
  rpc HasUser(HasUserRequest) returns (HasUserResponse);
}
